{{$NEXT}}

1.31     2021-11-09 (TRIAL RELEASE)

- Restored the use of "use integer", which was removed in 2010 as part of the
  change to support a 64-bit time_t in Perl, regardless of the platform. The
  timelocal() sub does very confusing things with non-integer seconds because
  internally it calls the system's localtime() function. And that localtime()
  function may strip off the non-integer portion of the seconds value. This
  leads to extremely confusing results because of the math that this module
  does on the return value of localtime() internally.

  With "use integer" back in effect the results are much more
  predictable. Based on a bug report from Dmitriy Shamatrin. GH #18.


1.30     2020-01-26

- Identical to 1.29.


1.29     2020-01-18 (TRIAL RELEASE)

- Added timelocal_posix() and timegm_posix() subs. These are _exact_ opposites
  of Perl's localtime() and gmtime(), meaning that a round trip between the
  two pairs always produces the same value.


1.28     2018-06-12

- Some tests which required support for epoch values larger than 2**32 were
  not being skipped when the underlying Perl did not support that.


1.27     2018-06-09

- This release is identical to 1.26 except that it is a stable release, not a
  trial.

- Fixed the tests so they will not break in the year 2020. The tests were
  passing in 2-digit years on the assumption that a year like "70" would be
  treated as 1970, but starting in 2020 this would be treated as 2070
  instead. Reported by Bernhard M. Wiedemann. RT #124787.

- Added timelocal_modern and timegm_modern variants as optional exports. These
  versions do not munge years at all. They treat the year value that they are
  given exactly as-is.


1.26     2018-05-20 (TRIAL RELEASE)

- Fixed the tests so they will not break in the year 2020. The tests were
  passing in 2-digit years on the assumption that a year like "70" would be
  treated as 1970, but starting in 2020 this would be treated as 2070